--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <button class="menu">&#9776;</button>
+        <button class="menu" aria-expanded="false" aria-controls="main-nav">&#9776;</button>
     <h1>生物酶实验室</h1>
-    <ul>
+    <ul id="main-nav">
         <li><a href="https://www.bilibili.com/video/BV171e3erEk8" target="_blank">最爱作品</a></li>
-        <li><a href="https://space.bilibili.com/179241918" target="_blank">相关信息</a></li>
+    <li><a href="https://space.bilibili.com/179241918" target="_blank">个人信息</a></li>
         <li><a href="blog.html">其他内容</a></li>
     </ul>
     </header>
@@ -22,7 +22,8 @@
         <p>同时也是Pedestrian</p>
     </section>
     <footer>
-    <p><a href="https://www.aaaa.al/" target="_blank">点击进入我老公的网页!!!!!</a></p>
+    <p><a href="https://www.aaaa.al/">点击进入我老公的网页!!!!!</a></p>
     </footer>
 </body>
+    <script src="js/main.js"></script>
 </html>
